--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -211,7 +211,7 @@
 
       &:first-child {
         font-weight: bold;
-        text-wrap: wrap;
+        white-space: nowrap;
 
         a {
           margin-left: 0;
@@ -261,6 +261,12 @@
     border-radius: $border-radius;
     background: var(--global-bg-color);
     box-shadow: 0 0 10px rgba(#000, 0.25);
+
+    /* Hide when empty */
+    &:empty,
+    &.hidden {
+      display: none !important;
+    }
 
     a {
       margin: 0;
