--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -324,6 +324,7 @@ body:hover .visually-hidden button {
    ========================================================================== */
 
 .navicon {
+  display: block;
   position: relative;
   width: $navicon-width;
   height: $navicon-height;
