--- a/_sass/theme/_default_dark.scss
+++ b/_sass/theme/_default_dark.scss
@@ -50,6 +50,7 @@ html[data-theme="dark"] {
     --global-masthead-link-color-hover  : #{$background-light};
     --global-text-color                 : #{$text};
     --global-text-color-light           : #d0d0d0;
+    --global-text-color-medium          : #b8b8b8;
     --global-thead-color                : #{$background-lighter};
     --card-bg-color                     : #333333;
     --selection-bg-color                : #{$link};
