--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -43,6 +43,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-masthead-link-color-hover  : mix(#000, #{$gray}, 25%);
     --global-text-color                 : #{$dark-gray};
     --global-text-color-light           : #{$light-gray};
+    --global-text-color-medium          : #{$gray};
     --global-thead-color                : #{$lighter-gray};
     --card-bg-color                     : #f8f9fa;
     --selection-bg-color                : #000;
